--- a/app/src/main/res/layout/address_and_payment.xml
+++ b/app/src/main/res/layout/address_and_payment.xml
@@ -26,6 +26,7 @@
         android:layout_marginStart="20dp"
         android:layout_marginTop="16dp"
         android:text="Delivery Address"
+        android:textColor="@android:color/black"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/toolbar3" />
 
@@ -34,7 +35,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="10dp"
         android:layout_marginEnd="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -47,6 +48,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="2dp"
         android:text="+ Add Address"
+        android:textColor="@color/teal_200"
         app:layout_constraintEnd_toEndOf="@+id/addressrecycleview"
         app:layout_constraintTop_toBottomOf="@+id/addressrecycleview" />
 
@@ -54,9 +56,10 @@
         android:id="@+id/textView11"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
+        android:layout_marginStart="10dp"
         android:layout_marginTop="10dp"
         android:text="Payment Method"
+        android:textColor="@android:color/black"
         app:layout_constraintStart_toStartOf="@+id/PAYMENT_METHOD"
         app:layout_constraintTop_toBottomOf="@id/textView10" />
 
@@ -78,25 +81,15 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <LinearLayout
-                android:layout_width="match_parent"
+            <RadioButton
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_margin="20dp"
-                    android:layout_weight="1"
-                    android:gravity="end"
-                    android:text="Cash On delivery" />
-
-                <RadioButton
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1" />
-            </LinearLayout>
+                android:layout_marginStart="10dp"
+                android:buttonTint="@color/teal_200"
+                android:checked="true"
+                android:gravity="center"
+                android:text="    Cash On Delivery"
+                android:textSize="16sp" />
 
             <TextView
                 android:layout_width="wrap_content"
