--- a/app/src/main/res/layout/fragment_edit_address.xml
+++ b/app/src/main/res/layout/fragment_edit_address.xml
@@ -8,227 +8,180 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <com.google.android.material.appbar.AppBarLayout
-        android:id="@+id/appBarLayout"
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/NewAddtoolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        app:title="New Address"
+        app:navigationIcon="@drawable/arrow_back"
         android:background="@drawable/shape"
-        android:fitsSystemWindows="true">
+        style="@style/Widget.MaterialComponents.Toolbar.Primary"
+        android:minHeight="?attr/actionBarSize" />
+
+    <androidx.core.widget.NestedScrollView
+        android:id="@+id/nestedScrollView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="55dp"
+        android:fillViewport="true"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center_horizontal"
-            android:orientation="horizontal">
+            android:layout_height="wrap_content"
+            android:layout_margin="18dp"
+            android:orientation="vertical"
+            android:padding="2dp">
 
-            <ImageButton
-                android:id="@+id/imageButton"
-                android:layout_width="64dp"
-                android:layout_height="64dp"
-                android:background="@android:color/transparent"
-                app:srcCompat="@drawable/arrow_back"
-                app:tint="@android:color/white" />
+            <com.google.android.material.textfield.TextInputLayout
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:hint="Recipient's Name"
+                app:boxStrokeColor="@color/teal_200"
+                app:hintTextColor="@color/teal_200">
 
-            <TextView
-                android:id="@+id/textView7"
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/recipientsname"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/roboto_regular"
+                    android:inputType="textPersonName"
+                    android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Subtitle2" />
+
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:hint="Address Line 1"
+                app:boxStrokeColor="@color/teal_200"
+                app:hintTextColor="@color/teal_200">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/addressLine1"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/roboto_regular"
+                    android:inputType="textPostalAddress"
+                    android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Subtitle2" />
+
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:hint="Address Line 2"
+                app:boxStrokeColor="@color/teal_200"
+                app:hintTextColor="@color/teal_200">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/addressLine2"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/roboto_regular"
+                    android:inputType="textMultiLine|textPostalAddress"
+                    android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Subtitle2" />
+
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:hint="Pin Code"
+                app:boxStrokeColor="@color/teal_200"
+                app:hintTextColor="@color/teal_200">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/pincode"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/roboto_regular"
+                    android:inputType="number"
+                    android:maxLength="6"
+                    android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Subtitle2" />
+
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_gravity="center"
-                android:fontFamily="@font/work_sans_semibold"
-                android:gravity="center|start"
-                android:text="New Address"
-                android:textAppearance="@style/TextAppearance.AppCompat.Large"
-                android:textColor="@android:color/white" />
-        </LinearLayout>
+                android:orientation="horizontal">
 
-    </com.google.android.material.appbar.AppBarLayout>
-
-    <androidx.core.widget.NestedScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-
-
-        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
-
-        <ScrollView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            tools:layout_editor_absoluteX="1dp"
-            tools:layout_editor_absoluteY="1dp"
-            android:fillViewport="true">
-
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
-                <LinearLayout
+                <com.google.android.material.textfield.TextInputLayout
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                     android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    android:layout_margin="18dp"
-                    android:layout_marginStart="16dp"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginEnd="16dp"
-                    android:orientation="vertical"
-                    android:padding="2dp"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent">
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:hint="State"
+                    app:boxStrokeColor="@color/teal_200"
+                    app:hintTextColor="@color/teal_200">
 
-                    <com.google.android.material.textfield.TextInputLayout
-                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+
+                    <AutoCompleteTextView
+                        android:id="@+id/statedropmenu"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:hint="Recipient's Name"
-                        app:boxStrokeColor="@color/teal_200"
-                        app:hintTextColor="@color/teal_200">
+                        android:dropDownWidth="wrap_content"
+                        android:dropDownHeight="wrap_content"
+                        android:inputType="none|textAutoComplete" />
+                </com.google.android.material.textfield.TextInputLayout>
 
-                        <com.google.android.material.textfield.TextInputEditText
-                            android:id="@+id/recipientsname"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:fontFamily="@font/roboto_regular"
-                            android:inputType="textPersonName"
-                            android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Subtitle2" />
+                <com.google.android.material.textfield.TextInputLayout
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:hint="City"
+                    app:boxStrokeColor="@color/teal_200"
+                    app:hintTextColor="@color/teal_200">
 
-                    </com.google.android.material.textfield.TextInputLayout>
 
-                    <com.google.android.material.textfield.TextInputLayout
-                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-
+                    <AutoCompleteTextView
+                        android:id="@+id/citydropmenu"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:hint="Address Line 1"
-                        app:boxStrokeColor="@color/teal_200"
-                        app:hintTextColor="@color/teal_200">
-
-                        <com.google.android.material.textfield.TextInputEditText
-                            android:id="@+id/addressLine1"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:fontFamily="@font/roboto_regular"
-                            android:inputType="textPostalAddress"
-                            android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Subtitle2" />
-
-                    </com.google.android.material.textfield.TextInputLayout>
-
-                    <com.google.android.material.textfield.TextInputLayout
-                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:hint="Address Line 2"
-                        app:boxStrokeColor="@color/teal_200"
-                        app:hintTextColor="@color/teal_200">
-
-                        <com.google.android.material.textfield.TextInputEditText
-                            android:id="@+id/addressLine2"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:fontFamily="@font/roboto_regular"
-                            android:inputType="textMultiLine|textPostalAddress"
-                            android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Subtitle2" />
-
-                    </com.google.android.material.textfield.TextInputLayout>
-
-                    <com.google.android.material.textfield.TextInputLayout
-                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:hint="Pin Code"
-                        app:boxStrokeColor="@color/teal_200"
-                        app:hintTextColor="@color/teal_200">
-
-                        <com.google.android.material.textfield.TextInputEditText
-                            android:id="@+id/pincode"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:fontFamily="@font/roboto_regular"
-                            android:inputType="number"
-                            android:maxLength="6"
-                            android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Subtitle2" />
-
-                    </com.google.android.material.textfield.TextInputLayout>
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:orientation="horizontal">
-
-                        <com.google.android.material.textfield.TextInputLayout
-                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:layout_weight="1"
-                            android:hint="State"
-                            app:boxStrokeColor="@color/teal_200"
-                            app:hintTextColor="@color/teal_200">
+                        android:inputType="none|textAutoComplete" />
+                </com.google.android.material.textfield.TextInputLayout>
 
 
-                            <AutoCompleteTextView
-                                android:id="@+id/statedropmenu"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_weight="1"
-                                android:dropDownWidth="wrap_content"
-                                android:dropDownHeight="wrap_content"
-                                android:inputType="none|textAutoComplete" />
-                        </com.google.android.material.textfield.TextInputLayout>
+            </LinearLayout>
 
-                        <com.google.android.material.textfield.TextInputLayout
-                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:layout_weight="1"
-                            android:hint="City"
-                            app:boxStrokeColor="@color/teal_200"
-                            app:hintTextColor="@color/teal_200">
+            <com.google.android.material.textfield.TextInputLayout
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:hint="Phone Number"
+                app:boxStrokeColor="@color/teal_200"
+                app:hintTextColor="@color/teal_200"
+                app:prefixText="+91"
+                app:prefixTextAppearance="@style/TextAppearance.MdcTypographyStyles.Subtitle2">
 
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/phoneNumber"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/roboto_regular"
+                    android:inputType="phone"
+                    android:maxLength="10"
+                    android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Subtitle2" />
 
-                            <AutoCompleteTextView
-                                android:id="@+id/citydropmenu"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_weight="1"
-                                android:inputType="none|textAutoComplete" />
-                        </com.google.android.material.textfield.TextInputLayout>
+            </com.google.android.material.textfield.TextInputLayout>
 
 
-                    </LinearLayout>
-
-                    <com.google.android.material.textfield.TextInputLayout
-                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:hint="Phone Number"
-                        app:boxStrokeColor="@color/teal_200"
-                        app:hintTextColor="@color/teal_200"
-                        app:prefixText="+91"
-                        app:prefixTextAppearance="@style/TextAppearance.MdcTypographyStyles.Subtitle2">
-
-                        <com.google.android.material.textfield.TextInputEditText
-                            android:id="@+id/phoneNumber"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:fontFamily="@font/roboto_regular"
-                            android:inputType="phone"
-                            android:maxLength="10"
-                            android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Subtitle2" />
-
-                    </com.google.android.material.textfield.TextInputLayout>
-
-
-                </LinearLayout>
-
-
-            </androidx.constraintlayout.widget.ConstraintLayout>
-
-
-        </ScrollView>
-
+        </LinearLayout>
     </androidx.core.widget.NestedScrollView>
 
     <com.google.android.material.button.MaterialButton
@@ -238,13 +191,13 @@
         android:layout_gravity="bottom"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginBottom="10dp"
+        android:layout_marginBottom="8dp"
         android:fontFamily="@font/ibm_regular"
         android:text="Save"
         android:textColor="@android:color/black"
         android:textSize="20sp"
         app:backgroundTint="@color/teal_200"
-        app:cornerRadius="20dp" />
+        app:cornerRadius="16dp" />
 
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
