--- a/app/src/main/res/layout/activity_cart.xml
+++ b/app/src/main/res/layout/activity_cart.xml
@@ -20,126 +20,55 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <androidx.core.widget.NestedScrollView
-        android:id="@+id/scrollView2"
+    <LinearLayout
+        android:id="@+id/linearLayout8"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/toolbar2">
+
+        <TextView
+            android:id="@+id/textView8"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:layout_weight="1"
+            android:fontFamily="@font/ibm_bold"
+            android:padding="10dp"
+            android:text="Item(s) in Cart"
+            android:textAppearance="@style/TextAppearance.Material3.TitleMedium" />
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/addtocartsearchbtn2"
+            style="@style/Widget.Material3.Button.ElevatedButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="Coupons"
+            android:textAppearance="@android:style/TextAppearance.Material.Body2"
+            android:textColor="@android:color/black"
+            app:backgroundTint="@color/teal_200"
+            app:icon="@drawable/ic_round_arrow_forward_ios_24"
+            app:iconGravity="end"
+            app:iconTint="@android:color/black" />
+    </LinearLayout>
+
+    <androidx.core.widget.NestedScrollView
+        android:id="@+id/scrollView2"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toTopOf="@+id/pricecard"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout8">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
 
-
-            <androidx.cardview.widget.CardView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:visibility="gone">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:padding="6dp">
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal">
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:drawablePadding="2dp"
-                            android:gravity="bottom"
-                            android:paddingStart="6dp"
-                            android:text="Bill To: "
-                            android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Subtitle1"
-                            android:textColor="@color/black"
-                            android:textStyle="bold"
-                            app:drawableStartCompat="@drawable/location" />
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:paddingStart="6dp"
-                            android:text="Himanshu"
-                            android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Subtitle1"
-                            android:textColor="@color/black"
-                            android:textStyle="bold" />
-
-                        <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:text="Change"
-                            android:textAlignment="textEnd"
-                            android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Subtitle2"
-                            android:textColor="@color/teal_200"
-                            android:textStyle="bold" />
-
-
-                    </LinearLayout>
-
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:maxWidth="300dp"
-                        android:paddingStart="6dp"
-                        android:text="484/2 - Chaudhary wada 4 skandrabad"
-                        android:textAppearance="@android:style/TextAppearance.Medium" />
-
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:background="@color/teal_200"
-                        android:fontFamily="@font/work_sans_semibold"
-                        android:paddingStart="6dp"
-                        android:text="Deliver By :"
-                        android:textAppearance="@android:style/TextAppearance.Material.Medium"
-                        android:textColor="@android:color/black" />
-
-
-                </LinearLayout>
-
-
-            </androidx.cardview.widget.CardView>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:id="@+id/textView8"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="bottom"
-                    android:layout_weight="1"
-                    android:fontFamily="@font/ibm_bold"
-                    android:padding="10dp"
-                    android:text="Item(s) in Cart"
-                    android:textAppearance="@style/TextAppearance.Material3.TitleMedium" />
-
-                <com.google.android.material.button.MaterialButton
-                    android:id="@+id/addtocartsearchbtn2"
-                    style="@style/Widget.Material3.Button.ElevatedButton"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:text="Coupons"
-                    android:textAppearance="@android:style/TextAppearance.Material.Body2"
-                    android:textColor="@android:color/black"
-                    app:backgroundTint="@color/teal_200"
-                    app:icon="@drawable/ic_round_arrow_forward_ios_24"
-                    app:iconGravity="end"
-                    app:iconTint="@android:color/black" />
-            </LinearLayout>
 
             <View
                 android:id="@+id/divider9"
@@ -254,10 +183,10 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
         android:layout_margin="8sp"
-        android:outlineAmbientShadowColor="@color/black"
         app:cardBackgroundColor="#3334E2D3"
-        app:cardElevation="1dp"
+        app:cardElevation="0dp"
         app:cardUseCompatPadding="true"
+        style="@style/Widget.MaterialComponents.CardView"
         app:contentPadding="10sp"
         app:layout_constraintBottom_toTopOf="@+id/proceedtopay"
         app:layout_constraintEnd_toEndOf="parent"
