--- a/app/src/main/res/layout/fragment_popular_categories.xml
+++ b/app/src/main/res/layout/fragment_popular_categories.xml
@@ -1,10 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    tools:context=".PopularCategories">
+    android:layout_height="wrap_content">
 
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/cardview_id"
@@ -16,7 +14,8 @@
         app:cardCornerRadius="10dp"
         app:cardElevation="0dp"
         app:strokeColor="@color/material_on_surface_stroke"
-        app:strokeWidth="1dp">
+        app:strokeWidth="1dp"
+        android:focusable="true">
 
         <LinearLayout
             android:layout_width="match_parent"
