--- a/app/src/main/res/layout/edit_family_or_new.xml
+++ b/app/src/main/res/layout/edit_family_or_new.xml
@@ -11,7 +11,7 @@
         android:layout_height="wrap_content">
 
         <androidx.appcompat.widget.Toolbar
-            android:id="@+id/toolbar"
+            android:id="@+id/profilebackbtn"
             style="@style/Widget.MaterialComponents.Toolbar.Primary"
             android:layout_width="match_parent"
             android:background="@drawable/shape"
